--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,89 @@
+@InProceedings{pmlr-dose,
+  title = 	 { Density of States Estimation for Out of Distribution Detection },
+  author =       {Morningstar, Warren and Ham, Cusuh and Gallagher, Andrew and Lakshminarayanan, Balaji and Alemi, Alex and Dillon, Joshua},
+  booktitle = 	 {Proceedings of The 24th International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {3232--3240},
+  year = 	 {2021},
+  editor = 	 {Banerjee, Arindam and Fukumizu, Kenji},
+  volume = 	 {130},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {13--15 Apr},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v130/morningstar21a/morningstar21a.pdf},
+  url = 	 {https://proceedings.mlr.press/v130/morningstar21a.html},
+}
+
+@INPROCEEDINGS{copod,
+  author={Li, Zheng and Zhao, Yue and Botta, Nicola and Ionescu, Cezar and Hu, Xiyang},
+  booktitle={2020 IEEE International Conference on Data Mining (ICDM)}, 
+  title={COPOD: Copula-Based Outlier Detection}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1118-1123},
+  keywords={Conferences;Computational modeling;Prediction algorithms;Data models;Computational efficiency;Task analysis;Anomaly detection;outlier detection;anomaly detection;copula;data mining},
+  doi={10.1109/ICDM50108.2020.00135}}
+
+
+@inproceedings{normflow_fails,
+  title = {Why Normalizing Flows Fail to Detect Out-of-Distribution Data},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Kirichenko, Polina and Izmailov, Pavel and Wilson, Andrew G},
+  editor = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M.F. and Lin, H.},
+  year = {2020},
+  volume = {33},
+  pages = {20578--20589},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/ecb9fe2fbb99c31f567e9823e884dbec-Paper.pdf}
+}
+
+@inproceedings{NEURIPS2019_7ac71d43,
+  title = {Neural Spline Flows},
+  booktitle = {Advances in Neural Information Processing Systems},
+  author = {Durkan, Conor and Bekasov, Artur and Murray, Iain and Papamakarios, George},
+  editor = {Wallach, H. and Larochelle, H. and Beygelzimer, A. and family=Buc, given=F., prefix=dAlché-, useprefix=true and Fox, E. and Garnett, R.},
+  year = {2019},
+  volume = {32},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2019/file/7ac71d433f282034e088473244df8c02-Paper.pdf}
+}
+
+@inproceedings{
+dinh2017density,
+title={Density estimation using Real {NVP}},
+author={Laurent Dinh and Jascha Sohl-Dickstein and Samy Bengio},
+booktitle={International Conference on Learning Representations},
+year={2017},
+url={https://openreview.net/forum?id=HkpbnH9lx}
+}
+
+@article{CHAMBERLIN2023e368,
+  title = {A Deep Convolutional Neural Network Ensemble for Composite Identification of Pulmonary Nodules and Incidental Findings on Routine {{PET}}/{{CT}}},
+  author = {Chamberlin, J.H. and Smith, C. and Schoepf, U.J. and Nance, S. and Elojeimy, S. and O'Doherty, J. and Baruah, D. and Burt, J.R. and Varga-Szemes, A. and Kabakus, I.M.},
+  year = {2023},
+  journaltitle = {Clinical Radiology},
+  volume = {78},
+  number = {5},
+  pages = {e368-e376},
+  issn = {0009-9260},
+  doi = {10.1016/j.crad.2023.01.014},
+  url = {https://www.sciencedirect.com/science/article/pii/S000992602300051X},
+}
+
+@article{niehoffEvaluationClinicalPerformance2023,
+  title = {Evaluation of the Clinical Performance of an {{AI-based}} Application for the Automated Analysis of Chest {{X-rays}}},
+  author = {Niehoff, Julius Henning and Kalaitzidis, Jana and Kroeger, Jan Robert and Schoenbeck, Denise and Borggrefe, Jan and Michael, Arwed Elias},
+  year = {2023},
+  journaltitle = {Scientific Reports},
+  shortjournal = {Scientific Reports},
+  volume = {13},
+  number = {1},
+  pages = {3680},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-023-30521-2},
+  url = {https://doi.org/10.1038/s41598-023-30521-2},
+}
+
 @article{kinouchi2002quick,
   title={Quick learning for batch-learning self-organizing map},
   author={Kinouchi, Makoto and Takada, Naoshi and Kudo, Yoshihiro and Ikemura, Toshimichi},
@@ -89,7 +175,7 @@ keywords = {Anomaly detection, Unsupervised learning, Autoencoder, Brain MRI},
 }
 @article{kascenas2023,
   title = {The Role of Noise in Denoising Models for Anomaly Detection in Medical Images},
-  author = {Kascenas, Antanas and Sanchez, Pedro and Schrempf, Patrick and Wang, Chaoyang and Clackett, William and Mikhael, Shadia S. and Voisey, Jeremy P and Goatman, Keith and Weir, Alexander and Pugeault, Nicolas and Tsaftaris, Sotirios A and O’Neil, Alison Q},
+  author = {Kascenas, Antanas and others},
   year = {2023},
   journaltitle = {Medical Image Analysis},
   volume = {90},
@@ -833,7 +919,7 @@ year={2020},
   author={Vershynin, Roman},
   volume={47},
   year={2018},
-  publisher={Cambridge university press}
+  publisher={Cambridge University Press}
 }
 
 @article{ruffUnifyingReviewDeep2021,
@@ -960,7 +1046,7 @@ keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencode
 
 @inproceedings{song2020score,
   title={Score-Based Generative Modeling through Stochastic Differential Equations},
-  author={Song, Yang and Sohl-Dickstein, Jascha and Kingma, Diederik P and Kumar, Abhishek and Ermon, Stefano and Poole, Ben},
+  author={Song, Yang and Sohl-Dickstein, Jascha and Kingma, Diederik and Kumar, Abhishek and Ermon, Stefano and Poole, Ben},
   booktitle={International Conference on Learning Representations},
   year={2020}
 }
@@ -1020,19 +1106,6 @@ Publisher: Association for Computing Machinery},
     author={Songqiao Han and Xiyang Hu and Hailiang Huang and Minqi Jiang and Yue Zhao},
     booktitle={Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
     year={2022},
-}
-
-@InProceedings{pmlr-v80-ruff18a,
-  title = 	 {Deep One-Class Classification},
-  author =       {Ruff, Lukas and Vandermeulen, Robert and Goernitz, Nico and Deecke, Lucas and Siddiqui, Shoaib Ahmed and Binder, Alexander and M{\"u}ller, Emmanuel and Kloft, Marius},
-  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
-  pages = 	 {4393--4402},
-  year = 	 {2018},
-  editor = 	 {Dy, Jennifer and Krause, Andreas},
-  volume = 	 {80},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {10--15 Jul},
-  publisher =    {PMLR},
 }
 
 @article{ruff_unifying_2021,
