--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -11,6 +11,8 @@
 \begin{tabbing}
 \Abi{EBM}{Energy-Based Model}
 \Ab{DSM}{Denoising Score Matching}
+\Ab{GNSM}{Gumbel Noise Score Matching}
+\Ab{MSMA}{Multiscale Score Matching Analysis}
 \Ab{OOD}{Out-of-Distribution Detetction}
 \Ab{AYO}{Add Your Own in alphabetic order\ldots}
 \end{tabbing}
